fix overflow-x on the sidebar

--- a/src/app/ui/sidebar/sidebar.component.scss
+++ b/src/app/ui/sidebar/sidebar.component.scss
@@ -41,7 +41,7 @@ ul {
 main {
 	padding: 1rem;
 	max-height: calc(100vh - 60px - 75px);
-    overflow: auto;
+    overflow-y: auto;
 	&::-webkit-scrollbar {
 		width: 0.5rem;
 	}
